            - changes in add_category() function
            - added statusbar msgs for controls on tab 5
        - tab 6:
            - added statusbar msgs for controls on tab 6

    - update: "core/log.lua"  / by pulsar
        - added check_filesize() function to clear logfile if it reaches the max allowable size (2MB)  / requested by Devious

    - update: "Announcer.wx.lua"  / by jrock
        - tab 3:
            - changed "textctrl_category" input field into a "choicectrl_category" selection
            - changed "choicectrl_category" to sort categories by name
            - fixed "textctrl_command" and "textctrl_alibinick" to avoid whitespaces in fields after restart
            - added "textctrl_checkage" to enable/disable "spinctrl_maxage"
            - removed "choicectrl_maxage" to select max-age of release to be announced
            - added "spinctrl_maxage" to input max-age in days of release to be announced
            - fixed "del_folder()" function on whitelist/blacklist window if no TAG was selected
            - changed "checkbox_alibicheck" to avoid wxMessageDialog to show up every time
        - tab 4:
            - changed "del_rule()" function
                - fix bug who delete btn caused a fatal error if no rule was selected
            - changed "add_rule()" function
                - check if rule name already exists
                - fix bug where add_rule overwrites last rule on list
            - added "rule_clone_button" button
            - disable clone rule buttons while connected to hub as expected
        - tab 5 / tab 6:
            - moved existing "tab_5" to "tab_6"
        - tab 5:
            - added new tab for "categories" on tab position 5
            - added "categories_listbox" element
            - changed "categories_listbox" to sort categories by name
            - added "import_categories_tbl()" function
                - import categories from "cfg/rules.lua" to "cfg/categories.lua"